--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script src="path/to/chartjs/dist/chart.umd.js"></script>
+  <script>
+    const myChart = new Chart(ctx, {});
+  </script>
 </html>
